--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
@@ -17,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "sweet-alert": "^2.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
