--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-confetti": "^6.0.1",
+    "react-country-region-selector": "^3.2.0",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
