--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pop",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "email-validator": "^2.0.4",
+    "html-react-parser": "^1.3.0",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
