--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "sweet-alert": "^2.0.5",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
