--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
+    "react-image-magnify": "^2.7.4",
+    "react-image-zoom": "^1.3.1",
+    "react-img-zoom": "^0.1.0",
+    "react-medium-image-zoom": "^4.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
