--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "email-validator": "^2.0.4",
+    "flickity": "^2.2.2",
+    "flickity-as-nav-for": "^2.0.1",
     "html-react-parser": "^1.3.0",
+    "jquery": "^3.6.0",
+    "lazyload": "^2.0.0-rc.2",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -24,6 +28,7 @@
     "react-country-region-selector": "^3.2.0",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-flickity-component": "^3.6.2",
     "react-icons": "^4.2.0",
     "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
@@ -33,8 +38,10 @@
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "sweet-alert": "^2.0.5",
     "sweetalert": "^2.1.2",
