--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "sweet-alert": "^2.0.5",
     "sweetalert": "^2.1.2",
