--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-react-parser": "^1.3.0",
     "jquery": "^3.6.0",
     "lazyload": "^2.0.0-rc.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -34,6 +35,7 @@
     "react-image-zoom": "^1.3.1",
     "react-img-zoom": "^0.1.0",
     "react-medium-image-zoom": "^4.3.5",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
