--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-tippy": "^1.4.0",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
