--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "reactjs-popup": "^2.0.5",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "sweet-alert": "^2.0.5",
