--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flickity-as-nav-for": "^2.0.1",
     "html-react-parser": "^1.3.0",
     "jquery": "^3.6.0",
+    "js-image-zoom": "^0.7.0",
     "lazyload": "^2.0.0-rc.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -34,6 +35,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-flickity-component": "^3.6.2",
     "react-icons": "^4.2.0",
+    "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
     "react-img-zoom": "^0.1.0",
