--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-flickity-component": "^3.6.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
