--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.0.1",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.3",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.16.0",
     "@syncfusion/ej2-react-calendars": "^19.3.43",
